# ConcurrentFileProcessingEngine

./: .gitignore  CMakeLists.txt  README.md  config.json
.github/workflows/: ci.yml
benchmarks/: benchmark_file_processing.cpp
include/: BenchmarkHarness.hpp  ChunkProcessor.hpp  ChunkSplitter.hpp  Config.hpp  FileMapper.hpp  OutputSerializer.hpp  ResultAggregator.hpp  ThreadPool.hpp  Types.hpp
src/: BenchmarkHarness.cpp  ChunkProcessor.cpp  ChunkSplitter.cpp  Config.cpp  FileMapper.cpp  OutputSerializer.cpp  ResultAggregator.cpp  ThreadPool.cpp  main.cpp
tests/: test_chunk_processor.cpp  test_chunk_splitter.cpp  test_config.cpp  test_file_mapper.cpp  test_result_aggregator.cpp
